--- a/lang/lang.json
+++ b/lang/lang.json
@@ -23,7 +23,7 @@
     "stopped": "Your bot has been stopped. You can restart it anytime.",
     "started": "Your bot is now active and ready for trading.",
     "trade_unsuccessful": "Trade at {} unsuccessful. Please check your balance and try again.",
-    "trade_success": "You are {}, {}",
+    "trade_success": "You are {} ${}",
     "choose_plan": "Please choose your plan",
     "monthly": "Monthly",
     "annual": "Annual",
