--- a/lang/lang.json
+++ b/lang/lang.json
@@ -29,13 +29,18 @@
     "annual": "Annual",
     "deposit": "Hello valued subscriber! This is just a quick reminder about maintaining your active subscription status for `{}`. To keep your account in good standing, please deposit $`{}` to the following address: `{}`.",
     "subscribed": "Your subscription is active on the `{}` plan",
-
+    "enter_redeem_code": "Please enter redeem code...",
+    "no_valid_redeem_code": "Not valid redeem code",
+    "valid_redeem_code": "Success to register redeem code",
+    "disabled_redeem_code": "You are already registered the redeem code",
 
     "start": "Start Trading",
     "stop": "Stop Trading",
     "settings": "Account Settings",
     "subscribe": "Subscribe to Premium",
     "redeem_code": "Redeem Promo Code",
+    "my_redeem_code": "My Redeem Code",
+    "register_redeem_code": "Register Redeem Code",
     "contact_admin": "Contact Support",
     "help": "How to Use the Bot",
     "account": "My Account",
