--- a/lang/lang.json
+++ b/lang/lang.json
@@ -1,15 +1,14 @@
 {
   "en": {
-    "welcome": "Welcome. What would you like to do?",
-
-    "enter_fix_amount": "Enter the fixed trading amount you would like to use.",
+    "welcome": "Welcome! What would you like to do?",
+    "enter_fix_amount": "Enter the fixed trading amount you'd like to use.",
     "enter_percent_balance": "Enter the percentage of your balance you want to allocate for trading.",
     "fix_amount_set": "Your fixed trading amount is now set to `{}`.",
     "percent_balance_set": "The percentage of your balance to trade is now set to `{}`.",
     "invalid_number": "Please enter a valid number for the trading amount or percentage.",
     "invalid_email": "Please enter a valid email address for your account registration.",
-    "set_account_type_real": "You have selected a `Real` account type. \nPlease register your account email to proceed.",
-    "set_account_type_practice": "You have selected a `Practice` account type. \nPlease register your account email to proceed.",
+    "set_account_type_real": "You've selected a `Real` account type. \nPlease register your account email to proceed.",
+    "set_account_type_practice": "You've selected a `Practice` account type. \nPlease register your account email to proceed.",
     "account_not_found": "We couldn't find your account email in our records.",
     "account_credentials_not_found": "Account email or password not found.",
     "register_email": "Your account email has been registered successfully. \nNow, please set your account password.",
@@ -19,20 +18,22 @@
     "manual": "Here are the instructions for using the bot...",
     "no_subscription": "It seems you don't have an active subscription. \nPlease /subscribe to start using the bot.",
     "register_account": "Please register your account to access the bot's features.",
-    "scheduled": "Your bot will start the trading at {} in UTC-{}.",
+    "scheduled": "Your bot will start trading at {} in UTC-{}.",
     "stopped": "Your bot has been stopped. You can restart it anytime.",
     "started": "Your bot is now active and ready for trading.",
     "trade_unsuccessful": "Trade at {} unsuccessful. Please check your balance and try again.",
     "trade_success": "You are {} ${}",
-    "choose_plan": "Please choose your plan",
+    "choose_plan": "Please choose your plan:",
     "monthly": "Monthly",
     "annual": "Annual",
-    "deposit": "Hello valued subscriber! This is just a quick reminder about maintaining your active subscription status for `{}`. To keep your account in good standing, please deposit $`{}` to the following address: `{}`.",
-    "subscribed": "Your subscription is active on the `{}` plan",
-    "enter_redeem_code": "Please enter redeem code...",
-    "no_valid_redeem_code": "Not valid redeem code",
-    "valid_redeem_code": "Success to register redeem code",
-    "disabled_redeem_code": "You are already registered the redeem code",
+    "deposit": "Hello valued subscriber! This is a reminder about maintaining your active subscription status for `{}`. To keep your account in good standing, please deposit $`{}` to the following address: `{}`.",
+    "subscribed": "Your subscription is active on the `{}` plan.",
+    "enter_promo_code": "Please enter the promo code...",
+    "invalid_promo_code": "Invalid promo code.",
+    "promo_code_not_applicable": "This promo code is not applicable.",
+    "promo_code_registered": "Promo code registered successfully.",
+    "promo_code_already_registered": "You've already registered this promo code.",
+
 
     "start": "Start Trading",
     "stop": "Stop Trading",
