--- a/lang/lang.json
+++ b/lang/lang.json
@@ -1,61 +1,60 @@
 {
   "en": {
-    "welcome": "Welcome! What would you like to do?",
-    "enter_fix_amount": "Enter the fixed trading amount you'd like to use.",
-    "enter_percent_balance": "Enter the percentage of your balance you want to allocate for trading.",
-    "fix_amount_set": "Your fixed trading amount is now set to `{}`.",
-    "percent_balance_set": "The percentage of your balance to trade is now set to `{}`.",
-    "invalid_number": "Please enter a valid number for the trading amount or percentage.",
-    "invalid_email": "Please enter a valid email address for your account registration.",
-    "set_account_type_real": "You've selected a `Real` account type. \nPlease register your account email to proceed.",
-    "set_account_type_practice": "You've selected a `Practice` account type. \nPlease register your account email to proceed.",
-    "account_not_found": "We couldn't find your account email in our records.",
-    "account_credentials_not_found": "Account email or password not found.",
-    "register_email": "Your account email has been registered successfully. \nNow, please set your account password.",
-    "enter_account_email": "Please enter your account email to register.",
-    "account_registered": "Congratulations! Your account has been registered successfully.",
-    "send_me_message": "Please send me a message with your request or feedback.",
-    "no_subscription": "It seems you don't have an active subscription. \nPlease /subscribe to start using the bot.",
-    "register_account": "Please register your account to access the bot's features.",
-    "scheduled": "Your bot will start trading at {} in UTC-{}.",
-    "stopped": "Your bot has been stopped. You can restart it anytime.",
-    "started": "Your bot is now active and ready for trading.",
-    "trade_unsuccessful": "Trade at {} unsuccessful. Please check your balance and try again.",
-    "trade_success": "You are {} ${}",
-    "choose_plan": "Please choose your plan:",
-    "monthly": "Monthly",
-    "annual": "Annual",
-    "deposit": "Hello valued subscriber! This is a reminder about maintaining your active subscription status for `{}`. To keep your account in good standing, please deposit $`{}` to the following address: `{}`.",
-    "subscribed": "Your subscription is active on the `{}` plan.",
-    "enter_promo_code": "Please enter the promo code...",
-    "invalid_promo_code": "Invalid promo code.",
-    "promo_code_not_applicable": "This promo code is not applicable.",
-    "promo_code_registered": "Promo code registered successfully.",
-    "promo_code_already_registered": "You've already registered this promo code.",
-    "manual": "Welcome to our Telegram bot for automated trading on the IQ Option platform! \n\nHere's a quick guide on how to get started:\n\n`Subscription`\nTo begin using the bot, you need to subscribe first. You can choose between an annual or monthly subscription plan. Alternatively, you can use a 3-day redeem code, which you can only use once.\nAdditionally, if you invite a friend who makes a deposit, you'll receive a bonus of 3 extra days added to your subscription.\nIQ Option Account Registration\nBefore you can start auto-trading, you need to register your IQ Option trading account with the bot. This allows the bot to execute trades on your behalf.\n`Trading Settings`\nOnce your account is set up, you can customize your trading preferences:\nSet your trading amount as a fixed value or a percentage of your account balance\nChoose your preferred trading strategy, such as Martingale\nSelect the trading pairs you want the bot to focus on\n`Advanced Features`\nThe bot offers several advanced features to optimize your trading experience:\nReal-time market analysis and trend detection\nAutomatic trade execution on IQ Option based on the bot's signals\nDynamic lot size management with customizable volume multiplication\nAutomatic selection of the most profitable currency pairs\n\nIf you need further assistance or have any questions, please don't hesitate to contact our support team using the \"Contact Support\" button. We're here to help you achieve your trading goals!\n\nHappy trading!",
-    "description": "Are you tired of manually trading on IQ Option, constantly glued to your screen? Introducing our cutting-edge Telegram bot that automates your trading process, allowing you to earn money while you sleep!\n\nOur bot utilizes advanced artificial intelligence to analyze market trends in real-time and execute trades with pinpoint accuracy\n\nSay goodbye to the stress and human errors - our bot makes the best decisions to maximize your profits.\nBut that's not all! Our innovative membership system ensures you get the most out of our bot:\nAnnual and monthly subscriptions for unlimited access\n3-day redeem codes to try out the bot for free\nBonus 3 days added to your subscription when a friend makes a deposit\nWhether you're a beginner or an experienced trader, our bot adapts to your level and strategy. Choose from our pre-configured trading portfolios or customize the settings to your preferences\n\nJoin the community of traders who are making money while they sleep with our revolutionary IQ Option bot. Try it out for free on your demo account and experience automated trading like never before!\nJoin the bot now on Telegram and start trading like a pro. Your financial success is within reach!",
-
-    "start": "Start Trading",
-    "stop": "Stop Trading",
-    "settings": "Account Settings",
-    "subscribe": "Subscribe to Premium",
-    "redeem_code": "Redeem Promo Code",
-    "my_redeem_code": "My Redeem Code",
-    "register_redeem_code": "Register Redeem Code",
-    "contact_admin": "Contact Support",
-    "help": "How to Use the Bot",
-    "account": "My Account",
-    "amount": "Trading Amount",
-    "strategy": "Trading Strategy",
-    "real_account": "Real Money Account",
-    "practice_account": "Demo Account",
-    "fix_amount": "Fixed Amount",
-    "percent_balance": "Percentage of Balance",
-    "without_martin_gale": "No Martingale",
-    "martin_gale_1": "Martingale Level 1",
-    "martin_gale_2": "Martingale Level 2",
-    "back": "Go Back",
-    "yes": "Yes",
-    "no": "No"
+    "welcome": "👋 Welcome! What would you like to do?",
+    "enter_fix_amount": "💰 Enter the fixed trading amount you'd like to use.",
+    "enter_percent_balance": "📊 Enter the percentage of your balance you want to allocate for trading.",
+    "fix_amount_set": "✅ Your fixed trading amount is now set to {}.",
+    "percent_balance_set": "✅ The percentage of your balance to trade is now set to {}.",
+    "invalid_number": "❌ Please enter a valid number for the trading amount or percentage.",
+    "invalid_email": "❌ Please enter a valid email address for your account registration.",
+    "set_account_type_real": "💼 You've selected a Real account type. \nPlease register your account email to proceed.",
+    "set_account_type_practice": "🎓 You've selected a Practice account type. \nPlease register your account email to proceed.",
+    "account_not_found": "🔍 We couldn't find your account email in our records.",
+    "account_credentials_not_found": "🔐 Account email or password not found.",
+    "register_email": "📧 Your account email has been registered successfully. \nNow, please set your account password.",
+    "enter_account_email": "📝 Please enter your account email to register.",
+    "account_registered": "🎉 Congratulations! Your account has been registered successfully.",
+    "send_me_message": "💬 Please send me a message with your request or feedback.",
+    "no_subscription": "⚠️ It seems you don't have an active subscription. \nPlease /subscribe to start using the bot.",
+    "register_account": "📝 Please register your account to access the bot's features.",
+    "scheduled": "⏰ Your bot will start trading at {} in UTC-{}.",
+    "stopped": "🛑 Your bot has been stopped. You can restart it anytime.",
+    "started": "🚀 Your bot is now active and ready for trading.",
+    "trade_unsuccessful": "❌ Trade at {} unsuccessful. Please check your balance and try again.",
+    "trade_success": "💹 You are {} ${}",
+    "choose_plan": "📅 Please choose your plan:",
+    "monthly": "🗓️ Monthly",
+    "annual": "📆 Annual",
+    "deposit": "💳 Hello valued subscriber! This is a reminder about maintaining your active subscription status for {}. To keep your account in good standing, please deposit ${} to the following address: {}.",
+    "subscribed": "✅ Your subscription is active on the {} plan.",
+    "enter_promo_code": "🎟️ Please enter the promo code...",
+    "invalid_promo_code": "❌ Invalid promo code.",
+    "promo_code_not_applicable": "⚠️ This promo code is not applicable.",
+    "promo_code_registered": "✅ Promo code registered successfully.",
+    "promo_code_already_registered": "ℹ️ You've already registered this promo code.",
+    "manual": "📚 Welcome to our Telegram bot for automated trading on the IQ Option platform! \n\nHere's a quick guide on how to get started:\n\nSubscription\nTo begin using the bot, you need to subscribe first. You can choose between an annual or monthly subscription plan. Alternatively, you can use a 3-day redeem code, which you can only use once.\nAdditionally, if you invite a friend who makes a deposit, you'll receive a bonus of 3 extra days added to your subscription.\nIQ Option Account Registration\nBefore you can start auto-trading, you need to register your IQ Option trading account with the bot. This allows the bot to execute trades on your behalf.\nTrading Settings\nOnce your account is set up, you can customize your trading preferences:\nSet your trading amount as a fixed value or a percentage of your account balance\nChoose your preferred trading strategy, such as Martingale\nSelect the trading pairs you want the bot to focus on\nAdvanced Features\nThe bot offers several advanced features to optimize your trading experience:\nReal-time market analysis and trend detection\nAutomatic trade execution on IQ Option based on the bot's signals\nDynamic lot size management with customizable volume multiplication\nAutomatic selection of the most profitable currency pairs\n\nIf you need further assistance or have any questions, please don't hesitate to contact our support team using the \"Contact Support\" button. We're here to help you achieve your trading goals!\n\nHappy trading! 🚀📈",
+    "description": "🤖 Are you tired of manually trading on IQ Option, constantly glued to your screen? Introducing our cutting-edge Telegram bot that automates your trading process, allowing you to earn money while you sleep! 💤💰\n\n🧠 Our bot utilizes advanced artificial intelligence to analyze market trends in real-time and execute trades with pinpoint accuracy\n\n👋 Say goodbye to the stress and human errors - our bot makes the best decisions to maximize your profits.\n🎁 But that's not all! Our innovative membership system ensures you get the most out of our bot:\n📅 Annual and monthly subscriptions for unlimited access\n🎟️ 3-day redeem codes to try out the bot for free\n🤝 Bonus 3 days added to your subscription when a friend makes a deposit\n📊 Whether you're a beginner or an experienced trader, our bot adapts to your level and strategy. Choose from our pre-configured trading portfolios or customize the settings to your preferences\n\n🚀 Join the community of traders who are making money while they sleep with our revolutionary IQ Option bot. Try it out for free on your demo account and experience automated trading like never before!\n💼 Join the bot now on Telegram and start trading like a pro. Your financial success is within reach!",
+    "start": "▶️ Start Trading",
+    "stop": "⏹️ Stop Trading",
+    "settings": "⚙️ Account Settings",
+    "subscribe": "💎 Subscribe to Premium",
+    "redeem_code": "🎟️ Redeem Promo Code",
+    "my_redeem_code": "🏷️ My Redeem Code",
+    "register_redeem_code": "📝 Register Redeem Code",
+    "contact_admin": "📞 Contact Support",
+    "help": "❓ How to Use the Bot",
+    "account": "👤 My Account",
+    "amount": "💰 Trading Amount",
+    "strategy": "📊 Trading Strategy",
+    "real_account": "💼 Real Money Account",
+    "practice_account": "🎓 Demo Account",
+    "fix_amount": "🔒 Fixed Amount",
+    "percent_balance": "📊 Percentage of Balance",
+    "without_martin_gale": "🚫 No Martingale",
+    "martin_gale_1": "🔢 Martingale Level 1",
+    "martin_gale_2": "🔢🔢 Martingale Level 2",
+    "back": "🔙 Go Back",
+    "yes": "✅ Yes",
+    "no": "❌ No"
   }
 }
